src/test/resources/shell/shellSyntaxErr/if/ifiErr.wacc
# if typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  ifi true
  then
    skip
  else
    skip
  fi
